added cash give

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -5,6 +5,9 @@ YouDontHaveCash: '&cVocê não tem cash suficiente.'
 CashToYou: '&cVocê não pode enviar cash para si mesmo.'
 IncorrectSendSubCommand: '&cUso incorreto. Use: /cash enviar <nick> <quantia>'
 IncorrectSetSubCommand: '&cUso incorreto. Use: /cash set <nick> <quantia>'
+IncorrectGiveSubCommand: '&cUso incorreto. Use: /cash give <nick> <quantia>'
+YouGived: '&aVocê deu &e{cash} &apara o jogador &e{player}.'
+YouReceived: '&aVocê recebeu &e{cash} &ado jogador &c{player}.'
 SettedWithSuccess: '&aVocê setou &e{cash} &apara o jogador &e{player}.'
 IsNotValidNumber: '&cVocê deve digitar um número válido.'
 
