--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
 name: MttCashV2
 version: @version@
 main: me.matt.mttcashv2.Main
+softdepend: [PlaceholderAPI]
 authors: [ mattnicee7 ]
 website: github.com/mattnicee7
 commands:
